# pdf-extractor

./: .env-sample  .gitignore  Dockerfile  README.Docker.md  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  test_types.py
.github/workflows/: ci.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 730936e2d347_create_documents_table.py  7bb47b187246_create_users_table.py  7fb663aca1b6_extraction_fields.py  96cd13b2b8e1_updating_users_model_for_oauth.py  ab5494abf0b9_update.py  cf8e8c6c6c2e_fix_id_types_to_uuid.py  dd1594144b37_updating_documents_model.py
src/: client.py  config.py  db.py  dependecies.py  jwt_auth.py  main.py  middlewares.py  test.db
src/api/: documents.py
src/bookextractor/: main.py
src/core/: config.py
src/models/: documents.py  extractions.py  users.py
src/routers/: documents.py
src/schemas/: documents.py  extractions.py  users.py
src/services/: ocr.py
src/tests/: conftest.py  test_documents.py
