[project]
name = "bookextractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlmodel>=0.0.24",
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "alembic>=1.16.4",
    "sqlalchemy>=2.0.42",
    "psycopg2>=2.9.10",
    "psycopg>=3.2.9",
    "pytest>=8.4.1",
    "aiosqlite>=0.21.0",
    "pymupdf>=1.26.3",
    "pdfplumber>=0.11.7",
    "pytesseract>=0.3.13",
    "pillow>=11.3.0",
    "ocrmypdf>=16.10.4",
    "streamlit>=1.48.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bookextractor"]
